@@ -10,7 +10,6 @@ class Net::SSLeay {
   use Net::SSLeay::Error;
   use Net::SSLeay::X509;
   use Net::SSLeay::X509_NAME;
-  use Net::SSLeay::SSL_SESSION;
   use Net::SSLeay::Callback::Msg;
   use Net::SSLeay::OPENSSL;
   use Net::SSLeay::OPENSSL_INIT_SETTINGS;
