@@ -3,7 +3,6 @@
 
 class Net::SSLeay::Callback::AlpnSelect : interface_t {
   use Net::SSLeay;
-  use Net::SSLeay::SSL_SESSION;
   
   required method : int ($ssl : Net::SSLeay, $out_ref : string[], $outlen_ref : byte*, $in : string, $inlen : int, $arg : object);
   
