@@ -32,6 +32,7 @@
     * Remove Net::SSLeay#session_reused method.
     * Remove Net::SSLeay#get1_session method.
     * Remove Net::SSLeay#set_session method.
+    * Remove Net::SSLeay::SSL_SESSION class.
     
   [Bug Fix]
     * Fix bugs of Net::SSLeay#get0_alpn_selected method.
